--- a/index.html
+++ b/index.html
@@ -8,33 +8,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>sathyakumar | Portfolio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            clifford: '#da373d',
-          }
-        }
-      }
-    }
-  </script>
-  <style type="text/tailwindcss">
-    @layer utilities {
-        .content-auto {
-          content-visibility: auto;
-        }
-      }
-    </style>
-
 
   <!-- google icon -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
   <link rel="stylesheet" href="style.css">
 
@@ -48,15 +28,15 @@
     <div class="header">
       <div class="nav-bar">
         <nav>
-          <div class="mb-nav" >
+          <div class="mb-nav">
             <input type="checkbox" id="hamburger-input" class="burger-shower" />
             <label id="hamburger-menu" for="hamburger-input">
               <nav id="sidebar-menu">
                 <span class="material-symbols-outlined">
                   close
-                  </span>
+                </span>
                 <ul>
-                  
+
                   <li><a onclick="closeNav();" href="#start">Start/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#work">Work/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#about">About/&gt;</a></li>
@@ -68,26 +48,26 @@
             <div class="overlay"></div>
           </div>
           <div class="logo" onclick="home();">
-                    <span class="st1">&lt;</span>
-                      <span class="name">Sathyakumar</span>
-                      <span class="st1">/&gt;</span>
-            </div>
-            <div class="menu">
-              <ul style="list-style-type: none;">
-                <a href="#start">
-                  <li id="active">start<span class="st2">/></span></li>
-                </a>
-                <a href="#work">
-                  <li>work<span class="st2">/></span></li>
-                </a>
-                <a href="#about">
-                  <li>about<span class="st2">/></span></li>
-                </a>
-                <a href="#contact">
-                  <li>contact<span class="st2">/></span></li>
-                </a>
-              </ul>
-            </div>
+            <span class="st1">&lt;</span>
+            <span class="name">Sathyakumar</span>
+            <span class="st1">/&gt;</span>
+          </div>
+          <div class="menu">
+            <ul style="list-style-type: none;">
+              <a href="#start">
+                <li id="active">start<span class="st2">/></span></li>
+              </a>
+              <a href="#work">
+                <li>work<span class="st2">/></span></li>
+              </a>
+              <a href="#about">
+                <li>about<span class="st2">/></span></li>
+              </a>
+              <a href="#contact">
+                <li>contact<span class="st2">/></span></li>
+              </a>
+            </ul>
+          </div>
         </nav>
       </div>
 
@@ -113,63 +93,12 @@
     <div class="line1"></div>
     <div class="work-content">
       <span class="st2 " style="font-family: 'Roboto Condensed', sans-serif; font-size: 20px;">Work /></span>
-      <p class="work-subContent"><b>Selected web Projects...</b></p>
+      <p class="work-subContent"><b>Selected Projects...</b></p>
     </div>
     <section class="work-section">
-      <div class="container">
-        <div class="card">
-          <div class="front">
-            <div class="content1">
-              <img src="research-img.png" />
-              <h3>RESEARCH</h3>
-            </div>
-          </div>
-          <div class="back">
-            <div class="content1">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure
-                nam expedita exercitationem?
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="card">
-          <div class="front">
-            <div class="content1">
-              <img src="design-img.png" />
-              <h3>DESIGN</h3>
-            </div>
-          </div>
-          <div class="back">
-            <div class="content1">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure
-                nam expedita exercitationem?
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div class="card">
-          <div class="front">
-            <div class="content1">
-              <img src="develop-img.png" />
-              <h3>DEVELOP</h3>
-            </div>
-          </div>
-          <div class="back">
-            <div class="content1">
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure
-                nam expedita exercitationem?
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div class="d">CRM</div>
+      <div class="d">Online Quiz</div>
+      <div class="d">Snap AR</div>
     </section>
   </div>
 
@@ -567,6 +496,8 @@
       <div class="copyright gray">© Made with &lt;/&gt; by Sathyakumar. Time2ER 2023.</div>
     </div>
   </div>
+
+  
 
 
   <script src="scripts.js"></script>
