--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       <p class="work-subContent"><b>Selected Projects...</b></p>
     </div>
     <section class="work-section">
-      <div class="d">CRM</div>
-      <div class="d">Online Quiz</div>
-      <div class="d">Snap AR</div>
+      <div class="d d1" onclick="site('https:/github.com/Febiecode/Time2ER-quiz-platform');">Online Quiz</div>
+      <div class="d d2" onclick="site('https:/github.com/Febiecode/Customer-Relationship-Management-CRM-Django-');">CRM</div>
+      <div class="d d3" onclick="site('https:/www.snapchat.com/explore/sathyakumar');">Snap AR</div>
     </section>
   </div>
 
