--- a/index.html
+++ b/index.html
@@ -72,7 +72,13 @@
       </div>
 
       <div class="start" id="start">
-        <div class="line"></div>
+        <div class="line">
+          <div class="indicator"></div>
+          <div class="dot1"></div>  <!--work-->
+          <div class="dot2"></div>  <!--about-->
+          <div class="dot3"></div>  <!--contact-->
+          <div class="dot4"></div>  <!--footer-->
+        </div>
         <div class="content">
           <span class="st2 " style="font-family: 'Roboto Condensed', sans-serif; font-size: 20px;">Start /></span>
 
@@ -83,27 +89,26 @@
           <p class="st2"
             style="position: relative; top: 70px; font-family: 'Roboto Condensed', sans-serif; font-size: 20px;">Let me
             show You...</p>
-          <div class="indicator"></div>
+          
         </div>
       </div>
     </div>
   </div>
 
   <div class="work" id="work">
-    <div class="line1"></div>
     <div class="work-content">
       <span class="st2 " style="font-family: 'Roboto Condensed', sans-serif; font-size: 20px;">Work /></span>
       <p class="work-subContent"><b>Selected Projects...</b></p>
     </div>
     <section class="work-section">
       <div class="d d1" onclick="site('https:/github.com/Febiecode/Time2ER-quiz-platform');">Online Quiz</div>
-      <div class="d d2" onclick="site('https:/github.com/Febiecode/Customer-Relationship-Management-CRM-Django-');">CRM</div>
+      <div class="d d2" onclick="site('https:/github.com/Febiecode/Customer-Relationship-Management-CRM-Django-');">CRM
+      </div>
       <div class="d d3" onclick="site('https:/www.snapchat.com/explore/sathyakumar');">Snap AR</div>
     </section>
   </div>
 
   <div class="about" id="about">
-    <div class="line1"></div>
     <div class="work-content1">
       <span class="st2 " style="font-family: 'Roboto Condensed', sans-serif; font-size: 20px;">About /></span>
     </div>
@@ -360,7 +365,6 @@
   </div>
 
   <div class="contact" id="contact">
-    <div class="line1"></div>
     <div class="work-content">
       <span class="st2 " style="font-family: 'Roboto Condensed', sans-serif; font-size: 20px;">contact /></span>
       <p class="work-subContent"><b>Get in Touch...</b></p>
@@ -376,8 +380,7 @@
   </div>
 
   <div class="footer" id="footer">
-    <div class="line1""></div>
-    
+
 
     <div class=" footer-content">
       <div class="contact-content">
@@ -497,7 +500,7 @@
     </div>
   </div>
 
-  
+
 
 
   <script src="scripts.js"></script>
