--- a/event.html
+++ b/event.html
@@ -12,7 +12,7 @@
     }
 
     .bgimg {
-        background-image: url('/images/bg.87635d9.webp');
+        background-image: url(images/bg.87635d9.webp);
         height: 100%;
         background-position: center;
         background-size: cover;
