--- a/event.html
+++ b/event.html
@@ -59,7 +59,7 @@
     <div class="bgimg">
         <div class="topleft">
             <!-- <p>Logo</p> -->
-            <a href="/index.html">
+            <a href="/port">
                 <div>
                     <span class="st1">&lt;</span>
                     <span class="name">Time2ER</span>
@@ -68,7 +68,7 @@
             </a>
         </div>
         <div class="middle">
-            <h1><a href="/">COMING SOON</a></h1>
+            <h1><a href="/port" >COMING SOON</a></h1>
             <hr>
             <!-- <p></p> -->
         </div>
