--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
