--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ onclick="site('https:/www.snapchat.com/explore/sathyakumar');"
 
 
         <div class="icon" style="width: 20px; height: 20px; ">
-          <a href="https://www.instagram.com/bullchron/">
+          <a href="https://www.instagram.com/time2developer/">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 56.7
                                       56.7" xml:space="preserve">
               <path d="M28.2 16.7c-7 0-12.8
