--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </span>
                 <ul>
                   <li><a onclick="closeNav();" href="#work">Work/&gt;</a></li>
-                  <li><a onclick="closeNav();" href="event.html">Event/&gt;</a></li>
+                  <li><a onclick="closeNav();" href="https://febiecode.github.io/Time2ER-community/l">Time2ER/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#about">About/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#contact">Contact/&gt;</a></li>
                 </ul>
@@ -56,8 +56,8 @@
               <a href="#work">
                 <li>work<span class="st2">/></span></li>
               </a>
-              <a href="event.html">
-                <li>event<span class="st2">/></span></li>
+              <a href="https://febiecode.github.io/Time2ER-community/">
+                <li>time2ER<span class="st2">/></span></li>
               </a>
               
               <a href="#about">
