--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </span>
                 <ul>
                   <li><a onclick="closeNav();" href="#work">Work/&gt;</a></li>
-                  <li><a onclick="closeNav();" href="https://febiecode.github.io/Time2ER-community/l">Time2ER/&gt;</a></li>
+                  <li><a onclick="closeNav();" href="https://febiecode.github.io/Time2ER-community/">Time2ER/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#about">About/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#contact">Contact/&gt;</a></li>
                 </ul>
