--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </span>
                 <ul>
                   <li><a onclick="closeNav();" href="#work">Work/&gt;</a></li>
-                  <li><a onclick="closeNav();" href="https://febiecode.github.io/Time2ER-community/">Time2ER/&gt;</a></li>
+                  <li><a onclick="closeNav();" href="/event.html">Event/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#about">About/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#contact">Contact/&gt;</a></li>
                 </ul>
@@ -56,8 +56,8 @@
               <a href="#work">
                 <li>work<span class="st2">/></span></li>
               </a>
-              <a href="https://febiecode.github.io/Time2ER-community/">
-                <li>time2ER<span class="st2">/></span></li>
+              <a href="/event.html">
+                <li>event<span class="st2">/></span></li>
               </a>
               
               <a href="#about">
@@ -101,9 +101,9 @@
       <p class="work-subContent"><b>Selected Projects...</b></p>
     </div>
     <section class="work-section">
-      <div class="d d1"><a href="https://github.com/Febiecode/Time2ER-quiz-platform">Online Quiz </a></div>
-      <div class="d d2"><a href="https://github.com/Febiecode/Customer-Relationship-Management-CRM-Django-">CRM</a></div>
-      <div class="d d3"><a href="https://www.snapchat.com/explore/sathyakumar">Snap AR</a></div>
+      <div class="d d1"><a href="http://febiecode.pythonanywhere.com/">Flight Booking Hub</a></div>
+      <div class="d d2"><a href="https://internship.infogrotech.com/">Registration Form</a></div>
+      <div class="d d3"><a href="https://febiecode.github.io/My-Portfolio/">My Portfolio</a></div>
       <!-- 
         onclick="site('https:/github.com/Febiecode/Time2ER-quiz-platform');"
 onclick="site('https:/github.com/Febiecode/Customer-Relationship-Management-CRM-Django-');"
