--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </span>
                 <ul>
                   <li><a onclick="closeNav();" href="#work">Work/&gt;</a></li>
-                  <li><a onclick="closeNav();" href="/event.html">Event/&gt;</a></li>
+                  <li><a onclick="closeNav();" href="/My-Portfolio/event.html">Event/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#about">About/&gt;</a></li>
                   <li><a onclick="closeNav();" href="#contact">Contact/&gt;</a></li>
                 </ul>
@@ -56,7 +56,7 @@
               <a href="#work">
                 <li>work<span class="st2">/></span></li>
               </a>
-              <a href="/event.html">
+              <a href="/My-Portfolio/event.html">
                 <li>event<span class="st2">/></span></li>
               </a>
               
